--- a/SHION-SHITAHAMA-PORTFOLIO/index.html
+++ b/SHION-SHITAHAMA-PORTFOLIO/index.html
@@ -108,7 +108,7 @@
     <section id="contact" class="main-content">
       <h2>CONTACT</h2>
       <p>ご連絡は下記メールアドレスからお願いします</p>
-      <p>mail : dbc.21160027@nsgcl.jp</p>
+      <p>mail : sample</p>
     </section>
 
     <!-- other -->
